--- a/styles/blocks/_section.scss
+++ b/styles/blocks/_section.scss
@@ -16,7 +16,7 @@
 }
 
 .order-section {
-  background: url("../../img/cta.png") center center no-repeat, #fff;
+  background: url("../img/cta.png") center center no-repeat, #fff;
   background-size: contain;
   min-height: 652px;
 }
