--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ a {
 }
 
 .hello {
-  background: url(../../img/back.png) center top no-repeat;
+  background: url(../img/back.png) center top no-repeat;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   height: 100vh;
@@ -237,7 +237,7 @@ a {
 }
 
 .order-section {
-  background: url("../../img/cta.png") center center no-repeat, #fff;
+  background: url("../img/cta.png") center center no-repeat, #fff;
   background-size: contain;
   min-height: 652px;
 }
