--- a/styles/main.css
+++ b/styles/main.css
@@ -283,7 +283,7 @@ a {
   position: relative;
 }
 .benefits__item:before {
-  content: url("../../img/Combined.png");
+  content: url("../img/Combined.png");
   position: absolute;
   top: 60px;
   right: 0;
@@ -520,7 +520,7 @@ a {
   border-radius: 4px;
 }
 .radio--checkbox .radio__visible:before {
-  background: url("../../img/Vector.png") center center no-repeat;
+  background: url("../img/Vector.png") center center no-repeat;
 }
 
 .radio__elem {
